--- a/index.html
+++ b/index.html
@@ -1,19 +1,50 @@
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Trung Kiệt </title>
-</head>
-<body>
-	<div>
-		<center>
-			<img src="avatar.jpg" alt="anh dai dien">
-		</center>
-		
-		<h1>Huynh Trung Kiet</h1>
-		<h2>Lop 12cb1 </h2>
-		<h2>Truong THPT Chiem Thanh Tan</h2>
-	</div>
-</body>
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>Trung Kiệt 2005</title>
+		<link rel="stylesheet" href="main.css">
+		<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+	</head>
+	<body>
+		<header>
+			<img id="avatar"  src="/img/avatar.jpg" alt="" width="100" height="100">
+			<p id="tieude">HUYNH TRUNG KIET</p>
+		</header>
+		<nav>
+			<div class="menu">
+				<ul>
+					<li><a href="https://trungkiet2005.github.io/trungkiet/">HOME</a></li>
+					<li><a href="https://github.com/trungkiet2005/trungkiet">SOURCE CODE</a></li>
+					<li><a href="#">VẬT LÍ</a></li>
+					<li><a href="https://vnoi.info/wiki/Home">TÀI LIỆU</a></li>
+				</ul>
+			</div>
+		</nav>
+		<div class ="gioithieu">
+			<div class="card">
+				<center>
+					<br><br>
+					<h1>Huỳnh Trung Kiệt</h2>
+					<h2>THPT Chiêm Thành Tấn - 12CB1</h2>
+					<br>
+					<h3>TRANING VOI 2023</h3><br>
+					<button class="nut"><a href="https://www.facebook.com/kayen.ti.9/">facebook</a></button><br>
+					<button class="nut"><a href="https://codeforces.com/profile/huynhtrungkiet09032005">codeforces</a></button><br>
+					<button class="nut"><a href="https://oj.vnoi.info/user/huynhtrungkiet09032005">vnoi</a></button><br>
+					<button class="nut"><a href="https://github.com/trungkiet2005">github</a></button><br>
+				</center>
+			</div>
+			<div class="card">
+				<center>
+					<br><br>
+					<iframe  width="350" height="280" src="https://www.youtube.com/embed/qXFgtkhWLgM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+					<br><br><h2>MUSIC</h2>
+					<br><br>
+					<h1>Lightning</h1>
+					<i class="fa-light fa-music"></i>
+				</center>
+			</div>
+		</div>
+	</body>
 </html>
