--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<header>
-			<img id="avatar"  src="/img/avatar.jpg" alt="" width="100" height="100">
+			<img id="avatar"  src="avatar.jpg" alt="">
 			<p id="tieude">HUYNH TRUNG KIET</p>
 		</header>
 		<nav>
@@ -24,11 +24,9 @@
 		<div class ="gioithieu">
 			<div class="card">
 				<center>
-					<br><br>
 					<h1>Huỳnh Trung Kiệt</h2>
 					<h2>THPT Chiêm Thành Tấn - 12CB1</h2>
-					<br>
-					<h3>TRANING VOI 2023</h3><br>
+					<h3>TRANING VOI 2023</h3>
 					<button class="nut"><a href="https://www.facebook.com/kayen.ti.9/">facebook</a></button><br>
 					<button class="nut"><a href="https://codeforces.com/profile/huynhtrungkiet09032005">codeforces</a></button><br>
 					<button class="nut"><a href="https://oj.vnoi.info/user/huynhtrungkiet09032005">vnoi</a></button><br>
@@ -37,12 +35,9 @@
 			</div>
 			<div class="card">
 				<center>
-					<br><br>
-					<iframe  width="350" height="280" src="https://www.youtube.com/embed/qXFgtkhWLgM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-					<br><br><h2>MUSIC</h2>
-					<br><br>
+					<iframe  id="video" src="https://www.youtube.com/embed/qXFgtkhWLgM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+					<h2>MUSIC</h2>
 					<h1>Lightning</h1>
-					<i class="fa-light fa-music"></i>
 				</center>
 			</div>
 		</div>
