--- a/index.html
+++ b/index.html
@@ -4,42 +4,49 @@
 		<meta charset="utf-8">
 		<title>Trung Kiệt 2005</title>
 		<link rel="stylesheet" href="main.css">
-		<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
-		<header>
-			<img id="avatar"  src="avatar.jpg" alt="">
-			<p id="tieude">HUYNH TRUNG KIET</p>
-		</header>
-		<nav>
-			<div class="menu">
-				<ul>
-					<li><a href="https://trungkiet2005.github.io/trungkiet/">HOME</a></li>
-					<li><a href="https://github.com/trungkiet2005/trungkiet">SOURCE CODE</a></li>
-					<li><a href="#">VẬT LÍ</a></li>
-					<li><a href="https://vnoi.info/wiki/Home">TÀI LIỆU</a></li>
-				</ul>
-			</div>
-		</nav>
-		<div class ="gioithieu">
-			<div class="card">
-				<center>
-					<h1>Huỳnh Trung Kiệt</h2>
-					<h2>THPT Chiêm Thành Tấn - 12CB1</h2>
-					<h3>TRANING VOI 2023</h3>
-					<button class="nut"><a href="https://www.facebook.com/kayen.ti.9/">facebook</a></button><br>
-					<button class="nut"><a href="https://codeforces.com/profile/huynhtrungkiet09032005">codeforces</a></button><br>
-					<button class="nut"><a href="https://oj.vnoi.info/user/huynhtrungkiet09032005">vnoi</a></button><br>
-					<button class="nut"><a href="https://github.com/trungkiet2005">github</a></button><br>
-				</center>
-			</div>
-			<div class="card">
-				<center>
-					<iframe  id="video" src="https://www.youtube.com/embed/qXFgtkhWLgM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-					<h2>MUSIC</h2>
-					<h1>Lightning</h1>
-				</center>
-			</div>
+		<video autoplay loop muted plays-inline id="bgvideo">
+			<source src="bgvideo.mp4" type="video/mp4">
+		</video>
+		<div class="content">
+			<header>
+				<img id="avatar"  src="avatar.jpg" alt="">
+				<p id="tieude">HUYNH TRUNG KIET</p>
+			</header>
+			<nav>
+				<div class="menu">
+					<ul>
+						<li><a href="https://trungkiet2005.github.io/trungkiet/">HOME</a></li>
+						<li><a href="https://github.com/trungkiet2005/trungkiet">SOURCE CODE</a></li>
+						<li><a href="#">VẬT LÍ</a></li>
+						<li><a href="https://vnoi.info/wiki/Home">TÀI LIỆU</a></li>
+					</ul>
+				</div>
+			</nav>
 		</div>
+		<div class="content">
+			<div class ="gioithieu">
+				<div class="card">
+					<center>
+						<h1>Huỳnh Trung Kiệt</h2>
+						<h2>THPT Chiêm Thành Tấn - 12CB1</h2>
+						<h3>TRANING VOI 2023</h3>
+						<button class="nut"><a href="https://www.facebook.com/kayen.ti.9/">facebook</a></button><br>
+						<button class="nut"><a href="https://codeforces.com/profile/huynhtrungkiet09032005">codeforces</a></button><br>
+						<button class="nut"><a href="https://oj.vnoi.info/user/huynhtrungkiet09032005">vnoi</a></button><br>
+						<button class="nut"><a href="https://github.com/trungkiet2005">github</a></button><br>
+					</center>
+				</div>
+				<div class="card">
+					<center>
+						<iframe  id="video" src="https://www.youtube.com/embed/qXFgtkhWLgM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+						<h2>MUSIC</h2>
+						<h1>Lightning</h1>
+					</center>
+				</div>
+			</div>
+	    </div>
 	</body>
 </html>
