--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>Trung Kiệt 2005</title>
 		<link rel="stylesheet" href="main.css">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
 		<video autoplay loop muted plays-inline id="bgvideo">
@@ -18,7 +18,7 @@
 			<nav>
 				<div class="menu">
 					<ul>
-						<li><a href="https://trungkiet2005.github.io/trungkiet/">HOME</a></li>
+						<li><a href="https://trungkiet2005.github.io/">HOME</a></li>
 						<li><a href="https://github.com/trungkiet2005/trungkiet">SOURCE CODE</a></li>
 						<li><a href="#">VẬT LÍ</a></li>
 						<li><a href="https://vnoi.info/wiki/Home">TÀI LIỆU</a></li>
