--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<ul>
 						<li><a href="https://trungkiet2005.github.io/">HOME</a></li>
 						<li><a href="https://github.com/trungkiet2005/trungkiet">SOURCE CODE</a></li>
-						<li><a href="#">VẬT LÍ</a></li>
+						<li><a href="https://trungkiet2005.github.io/vatly/">VẬT LÍ</a></li>
 						<li><a href="https://vnoi.info/wiki/Home">TÀI LIỆU</a></li>
 					</ul>
 				</div>
